Added api-tester, curl-converter, markdown-preview compoenents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,18 @@
         <span class="emoji">🕒</span>
         <span>Timestamp & UUID</span>
       </a>
+      <a routerLink="/api-tester" routerLinkActive="active" class="nav-link">
+        <span class="emoji">🌐</span>
+        <span>API Tester</span>
+      </a>
+      <a routerLink="/curl-converter" routerLinkActive="active" class="nav-link">
+        <span class="emoji">🔁</span>
+        <span>cURL Converter</span>
+      </a>
+      <a routerLink="/markdown-previewer" routerLinkActive="active" class="nav-link">
+        <span class="emoji">📜</span>
+        <span>Markdown Previewer</span>
+      </a>
     </nav>
 
     <section class="content">
